hphp/hack/test/typecheck/class_level_where_clauses/this_eq/require_is.php.like_types.exp
File "require_is.php", line 20, characters 19-21:
Member set has the wrong type (Typing[4341])
File "require_is.php", line 20, characters 23-23:
Expected C
File "require_is.php", line 15, characters 23-26:
But got dynamic because it is an unenforceable type
